fixed bug if title contains double quotes for tooltip; added dynamic truncating of brand-name while changing browser width

--- a/src/cldfofflinebrowser/static/project.css
+++ b/src/cldfofflinebrowser/static/project.css
@@ -1,3 +1,7 @@
+.navbar-brand{
+  width: 80%;
+}
+
 .leaflet-tooltip {
   padding: 1px 3px 1px 3px;
 }
@@ -22,4 +26,11 @@
 
 .btn-ctrl-img {
   margin-bottom: 2px;
+}
+
+.truncate {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
